<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <POU Name="FB_Laser_ABL" Id="{da082569-8ac6-4e90-8334-73d28c10a92f}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_Laser_ABL
VAR_INPUT
    xIN_Start : BOOL;
END_VAR
VAR_OUTPUT
END_VAR
VAR
    iStep : INT := 0;

    sLastName : STRING;
    iLastNum  : INT;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[CASE iStep OF

0: (* wait on start *)
    IF xIN_Start THEN
        iStep := 1000;
    END_IF

1000: (* TruMark *)
    IF if_SingleCmds.bReady THEN
        IF if_TruMark.Status.b6_LaserMalfunction THEN
            if_SingleCmds.iStepNr := 120; // TLV - Activate Laser / Open Shutter
            if_SingleCmds.bStart  := TRUE;
            iStep                 := 1010;
        ELSIF if_TruMark.Status.b0_Laser_On THEN
            iStep := 1100;
        ELSE
            iStep := 1020;
        END_IF;
    END_IF

1010: (* Reset Done*)
    IF if_SingleCmds.bReady THEN
        iStep := 1020;
    END_IF

1020: (* Laser ON *)
    IF if_SingleCmds.bReady THEN
        if_SingleCmds.iStepNr := 10; // TLV - Activate Laser / Open Shutter
        if_SingleCmds.bStart  := TRUE;
        iStep                 := 1030;
    END_IF;

1030: (* ON DONE*)
    IF if_SingleCmds.bReady THEN
        iStep := 1100;
    END_IF;

1100: (* New FILE ? todo *)
    IF 0 = FIND(sLastName,SIMU.sLaserFileName) THEN
        iStep := 1110;
    ELSE
        iStep := 1130;
    END_IF

1110: (* Load File *)
    IF if_SingleCmds.bReady THEN
        if_SingleCmds.iStepNr     := 20; // TLV - Load Marking-File with 2 variables
        if_SingleCmds.sInputValue := CONCAT('C:\Aquis\', CONCAT(SIMU.sLaserFileName, '.VLF'));
        sLastName                 := SIMU.sLaserFileName;

        if_SingleCmds.bStart := TRUE;
        iStep                := 1120;
    END_IF

1120: (* Conversation *)
    IF if_SingleCmds.bReady THEN
        if_SingleCmds.iStepNr := 30; // TLV - Request state of conversion
        if_SingleCmds.bStart  := TRUE;
        iStep                 := 1130;
    END_IF

1130: (* New Var ? todo*)
    IF iLastNum <> SIMU.iLaserFileNum THEN
        iStep := 1140;
    ELSE
        iStep := 1170;
    END_IF

1140: (* Set Var *)
    IF if_SingleCmds.bReady THEN
        if_SingleCmds.iStepNr := 35; // TLV - Set Variable
        // Variable name = 'Var1'	value = '3374'		Delimiter = ; --> will be replased with 0x00 in TruMark_Ethercat
        if_SingleCmds.sInputValue := CONCAT('Var1;', TO_STRING(SIMU.iLaserFileNum));
        iLastNum                  := SIMU.iLaserFileNum;
        SIMU.iLaserFileNum        := SIMU.iLaserFileNum + 1;

        if_SingleCmds.bStart := TRUE;
        iStep                := 1150;
    END_IF

1150: (* Var Done -> Convert *)
    IF if_SingleCmds.bReady THEN
        if_SingleCmds.iStepNr := 55; // TLV - Convert Marking File
        if_SingleCmds.bStart  := TRUE;
        iStep                 := 1160;
    END_IF

1160: (* Request Convert *)
    IF if_SingleCmds.bReady THEN
        if_SingleCmds.iStepNr := 30; // TLV - Request state of conversion
        if_SingleCmds.bStart  := TRUE;
        iStep                 := 1170;
    END_IF

1170: (* Request State *)
    IF if_SingleCmds.bReady THEN
        if_SingleCmds.iStepNr := 40; // TLV - Request Laser state
        if_SingleCmds.bStart  := TRUE;
        iStep                 := 1200;
    END_IF

1200: (* mark *)
    IF if_TruMark.Status.b0_Laser_On AND if_TruMark.Status.b1_Laser_Ready AND if_SingleCmds.bReady THEN
        if_SingleCmds.iStepNr := 50; // TLV - Activate Laser / Open Shutter
        if_SingleCmds.bStart  := TRUE;
        iStep                 := 1300;
    END_IF

// is done when safety signals are FALSE
// 1210: (* release laser *)
//     IF if_SingleCmds.bReady THEN
//         if_SingleCmds.iStepNr := 12; // TLV - Desactivate Laser
//         if_SingleCmds.bStart  := TRUE;
//         iStep                 := 1300;
//     END_IF

1300: (* Check GS Datumsringüberwachung *)
    IF NOT xIN_Start THEN
        iStep := 0;
    END_IF

END_CASE
]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>